--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-magnify": "^2.7.4",
+    "react-image-zoom": "^1.3.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-zoom": "^0.3.1",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
