--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "http-proxy-middleware": "^2.0.6",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
+    "react-jwt": "^1.2.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-zoom": "^0.3.1",
