--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "node-jose": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-magnify": "^2.7.4",
