--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "node-jose": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
     "react-jwt": "^1.2.0",
