--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
     "react-jwt": "^1.2.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-zoom": "^0.3.1",
+    "socket.io-client": "^4.7.1",
     "tailwindcss": "^3.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
